feat: 增加操作手册

--- a/archive/docs/01.指南/02.常用命令/00.Linux常用命令.md
+++ b/archive/docs/01.指南/02.常用命令/00.Linux常用命令.md
@@ -67,6 +67,18 @@ cat /etc/os-release
 
 # 文件拷贝到远程
 scp 文件 远程主机:目录 => scp 1.txt root@192.168.1.1:/opt/data
+
+# 压缩文件夹
+tar -zxvf 压缩包名称 目录 => tar -zxvf test.tar.gz test
+
+# 解压压缩包【无gzip】
+tar -xvf 压缩包名称 => tar -xvf test.tar.gz
+
+# 查看目录
+ls
+
+# 查看目录详情
+ll
 ```
 
 #### 网络
