docs: 修改更新日志

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -22,6 +22,12 @@ permalink: /pages/b04951/
 
 🚀 升级Elasticsearch至9.2.1
 
+🚀 升级Jackson至3.0.3
+
+###### 重构
+
+🚀 重构laokou-network模块，单个节点单个管理，去中心化【tcp/http/udp/mqtt】
+
 ###### 迁移
 
 🚀 Jackson2迁移至Jackson3
