--- a/archive/docs/01.指南/01.环境搭建/00.Centos7安装Mysql 8.0.33.md
+++ b/archive/docs/01.指南/01.环境搭建/00.Centos7安装Mysql 8.0.33.md
@@ -221,6 +221,8 @@ netstat -ntlp
 ./mysql -uroot -p
 # 修改密码
 ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY 'laokou123';
+# 查看表结构
+desc 表名 => desc test
 ```
 
 <img src="/img/1/img_21.png"/>
