feat: 重构context模块，强制遵循类的单一职责，只允许扩展，不允许对外提供修改

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -30,6 +30,8 @@ permalink: /pages/b04951/
 
 🚀 重构laokou-network模块，单个节点单个管理，去中心化【tcp/http/udp/mqtt】
 
+🚀 增加@Builder，强制遵循类的单一职责，只允许扩展，不对外提供修改
+
 ###### 迁移
 
 🚀 Jackson2迁移至Jackson3
