style: 根据sonar建议修改代码

--- a/archive/docs/01.指南/00.开发手册/27.组件【nacos】.md
+++ b/archive/docs/01.指南/00.开发手册/27.组件【nacos】.md
@@ -1130,7 +1130,7 @@ class NamingUtilsTest {
 
 		assertThatNoException().isThrownBy(() -> namingUtils.batchDeregisterInstance("test-service", "DEFAULT_GROUP", List.of(instance)));
 		Thread.sleep(1000);
-		assertThat(namingUtils.selectInstances("test-service", false).size()).isEqualTo(0);
+		assertThat(namingUtils.selectInstances("test-service", false).size()).isZero();
 	}
 
 	@Test
