--- a/laokou-service/laokou-auth/laokou-auth-domain/src/main/resources/i18n/auth_message_zh_CN.properties
+++ b/laokou-service/laokou-auth/laokou-auth-domain/src/main/resources/i18n/auth_message_zh_CN.properties
@@ -15,7 +15,7 @@
 #  */
 B_OAuth2_GenerateRefreshTokenFail=\u4EE4\u724C\u751F\u6210\u5668\u65E0\u6CD5\u751F\u6210\u5237\u65B0\u4EE4\u724C
 B_OAuth2_GenerateAccessTokenFail=\u4EE4\u724C\u751F\u6210\u5668\u65E0\u6CD5\u751F\u6210\u8BBF\u95EE\u4EE4\u724C
-B_OAuth2_RegisteredClientNotExist=\u6CE8\u518C\u5BA2\u6237\u7AEF\u4E0D\u5B58\u5728
+B_OAuth2_RegisteredClientNotFound=\u6CE8\u518C\u5BA2\u6237\u7AEF\u4E0D\u5B58\u5728
 B_OAuth2_InvalidClient=\u65E0\u6548\u5BA2\u6237\u7AEF
 B_OAuth2_InvalidScope=\u65E0\u6548\u4F5C\u7528\u57DF
 B_OAuth2_UserDisabled=\u7528\u6237\u5DF2\u7981\u7528
@@ -24,4 +24,5 @@ B_OAuth2_CaptchaError=\u9A8C\u8BC1\u7801\u9519\u8BEF
 B_OAuth2_UsernamePasswordError=\u7528\u6237\u540D\u6216\u5BC6\u7801\u9519\u8BEF
 B_OAuth2_MobileNotRegistered=\u624B\u673A\u53F7\u672A\u6CE8\u518C
 B_OAuth2_MailNotRegistered=\u90AE\u7BB1\u672A\u6CE8\u518C
-B_OAuth2_TenantNotExist=\u79DF\u6237\u4E0D\u5B58\u5728
+B_OAuth2_TenantNotFound=\u79DF\u6237\u4E0D\u5B58\u5728
+B_OAuth2_DeptNotFound=\u90E8\u95E8\u4E0D\u5B58\u5728
