test: 优化nacos和其他的测试用例

--- a/archive/docs/01.指南/00.开发手册/27.组件【nacos】.md
+++ b/archive/docs/01.指南/00.开发手册/27.组件【nacos】.md
@@ -922,221 +922,193 @@ class ConfigUtilsTest {
 
 NamingUtilsTest
 ```java
-@Slf4j
-@SpringBootTest
-@RequiredArgsConstructor
-@ContextConfiguration(classes = { NamingUtils.class,
-	NacosServiceManager.class,
-	NacosDiscoveryProperties.class,
-	ApplicationEventPublisher.class,
-	InetUtilsProperties.class,
-	Environment.class,
-	InetUtils.class,
-	InetIPv6Utils.class })
-@TestConstructor(autowireMode = TestConstructor.AutowireMode.ALL)
+/**
+ * @author laokou
+ */
+@Testcontainers
+// @formatter:off
 class NamingUtilsTest {
 
-	private final NamingUtils namingUtils;
+	private NamingService namingService;
 
-	private final NacosDiscoveryProperties nacosDiscoveryProperties;
+	@Container
+	static final NacosContainer nacos = new NacosContainer(DockerImageNames.nacos("v3.1.0"), 18848,  19848);
 
 	@BeforeEach
-	void setUp() {
-		assertThat(nacosDiscoveryProperties).isNotNull();
-		assertThat(nacosDiscoveryProperties.getNamespace()).isEqualTo("public");
-		assertThat(nacosDiscoveryProperties.getServerAddr()).isEqualTo("127.0.0.1:8848");
-		assertThat(nacosDiscoveryProperties.getGroup()).isEqualTo("DEFAULT_GROUP");
-		assertThat(nacosDiscoveryProperties.getUsername()).isEqualTo("nacos");
-		assertThat(nacosDiscoveryProperties.getPassword()).isEqualTo("nacos");
-		assertThat(nacosDiscoveryProperties.getEndpoint()).isEqualTo("");
-		assertThat(nacosDiscoveryProperties.getAccessKey()).isEqualTo("");
-		assertThat(nacosDiscoveryProperties.getSecretKey()).isEqualTo("");
-		assertThat(nacosDiscoveryProperties.getClusterName()).isEqualTo("nacos-cluster");
-		assertThat(nacosDiscoveryProperties.getNacosProperties()).isNotNull();
-		assertThat(namingUtils).isNotNull();
+	void setUp()throws NacosException {
+		namingService = NamingUtils.createNamingService(nacos.getServerAddr());
+		Assertions.assertThat(namingService.getServerStatus()).isEqualTo("UP");
+		Properties properties = new Properties();
+		properties.setProperty(PropertyKeyConst.USERNAME, "nacos");
+		properties.setProperty(PropertyKeyConst.NAMESPACE, "nacos");
+		properties.setProperty(PropertyKeyConst.SERVER_ADDR, nacos.getServerAddr());
+		properties.setProperty(PropertyKeyConst.NAMESPACE, "public");
+		namingService = NamingUtils.createNamingService(properties);
+		Assertions.assertThat(namingService.getServerStatus()).isEqualTo("UP");
 	}
 
 	@Test
-	void testCreateNamingService() throws Exception {
-		NamingService namingService = NamingUtils.createNamingService(nacosDiscoveryProperties.getServerAddr());
-		assertThat(namingService).isNotNull();
-		namingService = NamingUtils.createNamingService(nacosDiscoveryProperties.getNacosProperties());
-		assertThat(namingService).isNotNull();
-	}
+	void test_getAllInstances() throws NacosException, InterruptedException {
+		Assertions.assertThat(namingService.getAllInstances("test-service")).hasSize(0);
 
-	@Test
-	void testIsNacosDiscoveryInfoChanged() {
-		assertThat(namingUtils.isNacosDiscoveryInfoChanged(nacosDiscoveryProperties)).isFalse();
-	}
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.registerInstance("test-service", "127.0.0.1", 8080));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service")).hasSize(1);
 
-	@Test
-	void testGetAllInstances() throws NacosException, InterruptedException {
-		assertThat(namingUtils.getAllInstances("test-service").isEmpty()).isTrue();
-
-		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service").isEmpty()).isFalse();
-
-		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP").isEmpty()).isTrue();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.deregisterInstance("test-service", "127.0.0.1", 8080));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service", "DEFAULT_GROUP")).hasSize(0);
 
 		Instance instance = new Instance();
 		instance.setIp("127.0.0.1");
 		instance.setPort(8080);
-		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", instance));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", false).isEmpty()).isFalse();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.registerInstance("test-service", instance));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service", "DEFAULT_GROUP", false)).hasSize(1);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", instance));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service", false).isEmpty()).isTrue();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.deregisterInstance("test-service", instance));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service", false)).hasSize(0);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "DEFAULT_GROUP", instance));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service", Collections.emptyList()).isEmpty()).isFalse();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.registerInstance("test-service", "DEFAULT_GROUP", instance));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service", Collections.emptyList())).hasSize(1);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "DEFAULT_GROUP", instance));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", Collections.emptyList()).isEmpty()).isTrue();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.deregisterInstance("test-service", "DEFAULT_GROUP", instance));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service", "DEFAULT_GROUP", Collections.emptyList())).hasSize(0);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty()).isFalse();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.registerInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service", List.of("nacos-cluster"), false)).hasSize(1);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty()).isTrue();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.deregisterInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service", "DEFAULT_GROUP", List.of("nacos-cluster"), false)).hasSize(0);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", false).isEmpty()).isFalse();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.registerInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service", "DEFAULT_GROUP", false)).hasSize(1);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", false).isEmpty()).isTrue();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.deregisterInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service", "DEFAULT_GROUP", false)).hasSize(0);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty()).isFalse();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.registerInstance("test-service", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service", "DEFAULT_GROUP", List.of("nacos-cluster"), false)).hasSize(1);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty()).isTrue();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.deregisterInstance("test-service", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service", "DEFAULT_GROUP", List.of("nacos-cluster"), false)).hasSize(0);
 	}
 
 	@Test
-	void testSelectInstances() throws NacosException, InterruptedException {
-		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isFalse();
+	void test_selectInstances() throws NacosException, InterruptedException {
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.registerInstance("test-service", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.selectInstances("test-service", true)).hasSize(1);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isTrue();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.deregisterInstance("test-service", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.selectInstances("test-service", true)).hasSize(0);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.selectInstances("test-service", true, false).isEmpty()).isFalse();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.registerInstance("test-service", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.selectInstances("test-service", true, false)).hasSize(1);
 
-		assertThat(namingUtils.selectInstances("test-service", "DEFAULT_GROUP", true, false).isEmpty()).isFalse();
-		assertThat(namingUtils.selectInstances("test-service", List.of(nacosDiscoveryProperties.getClusterName()), true).isEmpty()).isFalse();
-		assertThat(namingUtils.selectInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), true, false).isEmpty()).isFalse();
-		assertThat(namingUtils.selectInstances("test-service", List.of(nacosDiscoveryProperties.getClusterName()), true, false).isEmpty()).isFalse();
-		assertThat(namingUtils.selectInstances("test-service", "DEFAULT_GROUP", true).isEmpty()).isFalse();
-		assertThat(namingUtils.selectInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), true).isEmpty()).isFalse();
+		Assertions.assertThat(namingService.selectInstances("test-service", "DEFAULT_GROUP", true, false)).hasSize(1);
+		Assertions.assertThat(namingService.selectInstances("test-service", List.of("nacos-cluster"), true)).hasSize(1);
+		Assertions.assertThat(namingService.selectInstances("test-service", "DEFAULT_GROUP", List.of("nacos-cluster"), true, false)).hasSize(1);
+		Assertions.assertThat(namingService.selectInstances("test-service", List.of("nacos-cluster"), true, false)).hasSize(1);
+		Assertions.assertThat(namingService.selectInstances("test-service", "DEFAULT_GROUP", true)).hasSize(1);
+		Assertions.assertThat(namingService.selectInstances("test-service", "DEFAULT_GROUP", List.of("nacos-cluster"), true)).hasSize(1);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty()).isTrue();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.deregisterInstance("test-service", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.getAllInstances("test-service", "DEFAULT_GROUP", List.of("nacos-cluster"), false)).hasSize(0);
 	}
 
 	@Test
-	void testSelectOneHealthyInstance() throws NacosException, InterruptedException {
-		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isFalse();
+	void test_selectOneHealthyInstance() throws NacosException, InterruptedException {
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.registerInstance("test-service", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.selectInstances("test-service", true)).hasSize(1);
 
-		assertThat(namingUtils.selectOneHealthyInstance("test-service")).isNotNull();
-		assertThat(namingUtils.selectOneHealthyInstance("test-service", "DEFAULT_GROUP")).isNotNull();
-		assertThat(namingUtils.selectOneHealthyInstance("test-service", false)).isNotNull();
-		assertThat(namingUtils.selectOneHealthyInstance("test-service", "DEFAULT_GROUP", false)).isNotNull();
-		assertThat(namingUtils.selectOneHealthyInstance("test-service", List.of(nacosDiscoveryProperties.getClusterName()))).isNotNull();
-		assertThat(namingUtils.selectOneHealthyInstance("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()))).isNotNull();
-		assertThat(namingUtils.selectOneHealthyInstance("test-service", List.of(nacosDiscoveryProperties.getClusterName()), false)).isNotNull();
-		assertThat(namingUtils.selectOneHealthyInstance("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false)).isNotNull();
+		Assertions.assertThat(namingService.selectOneHealthyInstance("test-service")).isNotNull();
+		Assertions.assertThat(namingService.selectOneHealthyInstance("test-service", "DEFAULT_GROUP")).isNotNull();
+		Assertions.assertThat(namingService.selectOneHealthyInstance("test-service", false)).isNotNull();
+		Assertions.assertThat(namingService.selectOneHealthyInstance("test-service", "DEFAULT_GROUP", false)).isNotNull();
+		Assertions.assertThat(namingService.selectOneHealthyInstance("test-service", List.of("nacos-cluster"))).isNotNull();
+		Assertions.assertThat(namingService.selectOneHealthyInstance("test-service", "DEFAULT_GROUP", List.of("nacos-cluster"))).isNotNull();
+		Assertions.assertThat(namingService.selectOneHealthyInstance("test-service", List.of("nacos-cluster"), false)).isNotNull();
+		Assertions.assertThat(namingService.selectOneHealthyInstance("test-service", "DEFAULT_GROUP", List.of("nacos-cluster"), false)).isNotNull();
 
-		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isTrue();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.deregisterInstance("test-service", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.selectInstances("test-service", true)).hasSize(0);
 	}
 
 	@Test
-	void testSubscribeService() throws NacosException, InterruptedException {
-		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isFalse();
+	void test_subscribeService() throws NacosException, InterruptedException {
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.registerInstance("test-service", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.selectInstances("test-service", true)).hasSize(1);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", "DEFAULT_GROUP", evt -> assertThat(evt).isNotNull()));
-		assertThatNoException().isThrownBy(() -> namingUtils.unsubscribe("test-service", "DEFAULT_GROUP", evt -> assertThat(evt).isNotNull()));
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.subscribe("test-service", "DEFAULT_GROUP", evt -> Assertions.assertThat(evt).isNotNull()));
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.unsubscribe("test-service", "DEFAULT_GROUP", evt -> Assertions.assertThat(evt).isNotNull()));
 
-		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", evt -> assertThat(evt).isNotNull()));
-		assertThatNoException().isThrownBy(() -> namingUtils.unsubscribe("test-service", evt -> assertThat(evt).isNotNull()));
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.subscribe("test-service", evt -> Assertions.assertThat(evt).isNotNull()));
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.unsubscribe("test-service", evt -> Assertions.assertThat(evt).isNotNull()));
 
-		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), evt -> assertThat(evt).isNotNull()));
-		assertThatNoException().isThrownBy(() -> namingUtils.unsubscribe("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), evt -> assertThat(evt).isNotNull()));
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.subscribe("test-service", "DEFAULT_GROUP", List.of("nacos-cluster"), evt -> Assertions.assertThat(evt).isNotNull()));
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.unsubscribe("test-service", "DEFAULT_GROUP", List.of("nacos-cluster"), evt -> Assertions.assertThat(evt).isNotNull()));
 
-		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", List.of(nacosDiscoveryProperties.getClusterName()), evt -> assertThat(evt).isNotNull()));
-		assertThatNoException().isThrownBy(() -> namingUtils.unsubscribe("test-service", List.of(nacosDiscoveryProperties.getClusterName()), evt -> assertThat(evt).isNotNull()));
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.subscribe("test-service", List.of("nacos-cluster"), evt -> Assertions.assertThat(evt).isNotNull()));
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.unsubscribe("test-service", List.of("nacos-cluster"), evt -> Assertions.assertThat(evt).isNotNull()));
 
 		// 只选择订阅ip为`127.0`开头的实例。
 		NamingSelector selector = NamingSelectorFactory.newIpSelector("127.0.*");
-		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", "DEFAULT_GROUP", selector, evt -> assertThat(evt).isNotNull()));
-		assertThatNoException().isThrownBy(() -> namingUtils.unsubscribe("test-service", "DEFAULT_GROUP", selector, evt -> assertThat(evt).isNotNull()));
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.subscribe("test-service", "DEFAULT_GROUP", selector, evt -> Assertions.assertThat(evt).isNotNull()));
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.unsubscribe("test-service", "DEFAULT_GROUP", selector, evt -> Assertions.assertThat(evt).isNotNull()));
 
-		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", selector, evt -> assertThat(evt).isNotNull()));
-		assertThatNoException().isThrownBy(() -> namingUtils.unsubscribe("test-service", selector, evt -> assertThat(evt).isNotNull()));
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.subscribe("test-service", selector, evt -> Assertions.assertThat(evt).isNotNull()));
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.unsubscribe("test-service", selector, evt -> Assertions.assertThat(evt).isNotNull()));
 
-		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isTrue();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.deregisterInstance("test-service", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.selectInstances("test-service", true)).hasSize(0);
 	}
 
 	@Test
-	void testGetServicesOfServer() throws NacosException, InterruptedException {
-		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isFalse();
+	void test_getServicesOfServer() throws NacosException, InterruptedException {
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.registerInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.selectInstances("test-service", true)).hasSize(1);
 
-		assertThat(namingUtils.getServicesOfServer(1, 10, "DEFAULT_GROUP").getCount() > 0).isTrue();
-		assertThat(namingUtils.getServicesOfServer(1, 10).getCount() > 0).isTrue();
+		Assertions.assertThat(namingService.getServicesOfServer(1, 10, "DEFAULT_GROUP").getCount() > 0).isTrue();
+		Assertions.assertThat(namingService.getServicesOfServer(1, 10).getCount() > 0).isTrue();
 
-		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", "DEFAULT_GROUP", evt -> assertThat(evt).isNotNull()));
-		assertThat(namingUtils.getSubscribeServices().isEmpty()).isFalse();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.subscribe("test-service", "DEFAULT_GROUP", evt -> Assertions.assertThat(evt).isNotNull()));
+		Assertions.assertThat(namingService.getSubscribeServices()).hasSize(1);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
-		Thread.sleep(1000);
-		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isTrue();
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.deregisterInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, "nacos-cluster"));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.selectInstances("test-service", true)).hasSize(0);
 	}
 
 	@Test
-	void testBatchRegisterInstance() throws NacosException, InterruptedException {
+	void test_batchRegisterInstance() throws NacosException, InterruptedException {
 		Instance instance = new Instance();
 		instance.setIp("127.0.0.1");
 		instance.setPort(8080);
-		assertThatNoException().isThrownBy(() -> namingUtils.batchRegisterInstance("test-service", "DEFAULT_GROUP", List.of(instance)));
-		Thread.sleep(1000);
-		assertThat(namingUtils.selectInstances("test-service", true).size()).isEqualTo(1);
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.batchRegisterInstance("test-service", "DEFAULT_GROUP", List.of(instance)));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.selectInstances("test-service", true).size()).isEqualTo(1);
 
-		assertThatNoException().isThrownBy(() -> namingUtils.batchDeregisterInstance("test-service", "DEFAULT_GROUP", List.of(instance)));
-		Thread.sleep(1000);
-		assertThat(namingUtils.selectInstances("test-service", false).size()).isZero();
-	}
-
-	@Test
-	void testNacosServiceShutDown() throws InterruptedException {
-		Thread.sleep(1000);
-		assertThatNoException().isThrownBy(namingUtils::nacosServiceShutDown);
+		Assertions.assertThatNoException().isThrownBy(() -> namingService.batchDeregisterInstance("test-service", "DEFAULT_GROUP", List.of(instance)));
+		Thread.sleep(Duration.ofSeconds(1));
+		Assertions.assertThat(namingService.selectInstances("test-service", false).size()).isZero();
 	}
 
 }
