refactor(重构): 重构分布式ID

--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -383,11 +383,11 @@ mvn clean install -P dev -DskipTests
 
 <img src="/img/项目启动【dev环境】/img_7.png">
 
-🚀 <font color="red">注意：请运行laokou-nacos、laokou-distributed-identifier、laokou-oss、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】</font>
+🚀 <font color="red">注意：请运行laokou-nacos、laokou-distributed-id、laokou-oss、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】</font>
 
-🚀 <font color="red">注意：请运行laokou-nacos、laokou-distributed-identifier、laokou-oss、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】</font>
+🚀 <font color="red">注意：请运行laokou-nacos、laokou-distributed-id、laokou-oss、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】</font>
 
-🚀 <font color="red">注意：请运行laokou-nacos、laokou-distributed-identifier、laokou-oss、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】</font>
+🚀 <font color="red">注意：请运行laokou-nacos、laokou-distributed-id、laokou-oss、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】</font>
 
 注意：<font color="red">图片仅供参考，以实际目录为准</font>
 
