feat: 指定分布式ID注册到Nacos为永久实例，走CP协议【强一致性】 fix: 修复测试用例无法上传测试覆盖报告

--- a/archive/docs/01.指南/05.后端指南/09.Spring Cloud Gateway+Redis+Nacos之动态路由和负载均衡.md
+++ b/archive/docs/01.指南/05.后端指南/09.Spring Cloud Gateway+Redis+Nacos之动态路由和负载均衡.md
@@ -110,7 +110,7 @@ spring:
         # true 临时 false 持久
         ephemeral: true
         # 服务注册&发现-集群名称
-        cluster-name: nacos-cluster
+        cluster-name: iot-cluster
         heart-beat:
           # 开启心跳检测
           enabled: true
@@ -132,7 +132,7 @@ spring:
         # 配置中心-分组
         group: DEFAULT
         # 配置中心-集群名称
-        cluster-name: nacos-cluster
+        cluster-name: iot-cluster
         # 配置中心-开启自动刷新
         refresh-enabled: true
         # 配置中心-配置文件格式
