feat: 增加提示词【待完善】 style: 枚举类去掉Enum后缀

--- a/archive/docs/01.指南/05.后端指南/00.COLA代码规范.md
+++ b/archive/docs/01.指南/05.后端指南/00.COLA代码规范.md
@@ -100,7 +100,7 @@ validateUserCredentials() </span> 或 <span style="color: #00dd00;"> eliminateDu
 | xxxEventHandler  | Event Handler       | 处理事件                         |
 | xxxFactory       | Domain Factory      | 领域工厂                         |
 | xxxController    | Controller          | 处理页面请求                       |
-| xxxEnum          | Enum                | 枚举                           |
+| xxx              | Enum                | 枚举                           |
 | xxxFilter        | Filter              | 过滤器                          |
 
 ## 3.方法命名
