feat: 优化项目文档

--- a/archive/docs/00.二开指南/01.指南/00.后端项目启动.md
+++ b/archive/docs/00.二开指南/01.指南/00.后端项目启动.md
@@ -214,11 +214,11 @@ kcloud_platform_generator.sql【代码生成】
 
 🚀 启动服务
 
-<font color="red">注意：请运行laokou-nacos、laokou-distributed-id、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】</font>
+<font color="red">注意：请运行laokou-nacos、laokou-distributed-id、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤启动服务】</font>
 
-<font color="red">注意：请运行laokou-nacos、laokou-distributed-id、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】</font>
+<font color="red">注意：请运行laokou-nacos、laokou-distributed-id、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤启动服务】</font>
 
-<font color="red">注意：请运行laokou-nacos、laokou-distributed-id、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】</font>
+<font color="red">注意：请运行laokou-nacos、laokou-distributed-id、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤启动服务】</font>
 
 🚀 访问API文档
 
