feat: 增加文档【项目配置和JVM性能优化】

--- a/archive/docs/00.二开指南/01.指南/05.JVM性能优化.md
+++ b/archive/docs/00.二开指南/01.指南/05.JVM性能优化.md
@@ -113,7 +113,7 @@ java -XX:+PrintFlagsFinal -version | grep Compressed
 | JNI malloc    | 本地库         |
 | Thread Stack  | 每个线程的栈      |
 
-##### 🚀 tomcat
+##### 🚀 Tomcat
 
 <font color="red">👉 注意：线程栈也会吃内存（每线程 ~1MB）</font>
 
