--- a/archive/docs/00.二开指南/01.指南/12.网关路由配置.md
+++ b/archive/docs/00.二开指南/01.指南/12.网关路由配置.md
@@ -8,6 +8,14 @@ permalink: /pages/a0f8a0/
 
 ## 📌 概述
 
+<font style="color:red;">动态路由</font>
+
+路由规则不是写在配置文件中，而是存储在外部系统（如 Nacos、Consul、Apollo、Redis 或数据库）中。Spring Cloud Gateway 能够监听这些外部系统的变化，**在不重启网关的情况下**，实时地获取最新的路由配置并使其生效。
+
+**注意**
+
+**静态路由**是路由规则以配置文件（如 `application.yml`）的方式硬编码在项目中。
+
 `RouteDefinition` 是 Spring Cloud Gateway 中用于定义路由规则的核心对象。本文档描述了 `router.json` 中的路由配置规范。
 
 ---
